@@ -1,5 +1,10 @@
 2008-06-22  Neal H. Walfield  <neal@gnu.org>
 
+	* ager.c: Include "profile.h".
+	(ager_loop): Profile.
+
+2008-06-22  Neal H. Walfield  <neal@gnu.org>
+
 	* list.h (list_count) [! NDEBUG]: Don't check the length of the
 	list in this case...
 	[! NCHECK]: ... but in this case.
